@startuml

title __GAMES_FACTORY's Class Diagram__\n

  namespace academy.mindswap.game {
    namespace _factory {
      abstract class academy.mindswap.games_factory.Game {
          + Game()
          + removeFromServerList()
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace _factory {
      interface academy.mindswap.games_factory.GameController {
          {abstract} + acceptPlayer()
          {abstract} + isAcceptingPlayers()
          {abstract} + removeFromServerList()
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace _factory {
      enum GameType {
        BINGO
        QUIZ
        WHEEL_OF_FORTUNE
        description
      }
    }
  }
  

  namespace academy.mindswap.game {
    namespace _factory {
      class academy.mindswap.games_factory.GamesFactory {
          {static} + create()
      }
    }
  }
  

  academy.mindswap.games_factory.Game .up.|> academy.mindswap.games_factory.GameController
  academy.mindswap.games_factory.Game o-- academy.mindswap.games_factory.GameType : gameType
  academy.mindswap.games_factory.Game o-- academy.mindswap.server.Server : server


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
